--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<header style="background-color:white">
-    <center><img src="techmainbanner.png" alt="Logo" width="1000px"></center>
-    <link rel="stylesheet" href="style.css">
-</header>
+  <link rel="stylesheet" href="style.css">
+<p>
+    <center><img src="techmainbanner.png" alt="Logo" width="1200px" ></center>
+</p>
 
 <body>
     <header>
@@ -166,15 +165,22 @@
             <h1 style="text-align:center;">PROJECT 1</h1>
             <h4 style="text-align:center;">Institute Site</h4>
             <img src="project2a.png" style="width:40%" class="center">
-            <p>____________________________________________________________________________________________________________________________</p>
+            <hr>
         </div>
         
         <div class="project">
             <h1 style="text-align:center;">PROJECT 2</h1>
             <h4 style="text-align:center;">Resume Builder Website</h4>
             <img src="resume.jpg" style="width:40%" class="center">
-            <p>____________________________________________________________________________________________________________________________</p> 
+            <hr> 
         </div>
+
+        <div class="project">
+          <h1 style="text-align:center;">PROJECT 3</h1>
+          <h4 style="text-align:center;">Trekking Site</h4>
+          <img src="treking.jpg" style="width:40%" class="center">
+          <hr>
+      </div>
         <!-- Add more project items as needed -->
     </section>
 
@@ -237,7 +243,4 @@
   
  
 </body>
-<footer>
-
-</footer>
 </html>
