--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <link rel="stylesheet" href="style.css">
 <p>
-    <center><img src="techmainbanner.png" alt="Logo" width="1200px" ></center>
+    <center><img src="newbanner.jpg" alt="Logo" width="1200px" ></center>
 </p>
 
 <body>
