--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
             <div class="portfolio-card">
                 <img src="protofilo1.jpg" alt="">
                 <div class="overlay">
-                    <h3>RESUME DEVELOPER</h3>
-                    <p>Generate your official logo with us .</p>
-                    <button>link-></button>
+                    <h3>RESUME BUILDER</h3>
+                    <p>Generate your official Resume with us .</p>
+                    <button><a href="https://pratik1of1.github.io/resume-builder/">link-></a></button>
                 </div>
             </div>
             <div class="portfolio-card">
                 <img src="protofilo2.jpg" alt="">
                 <div class="overlay">
-                    <h3>Oraganization</h3>
+                    <h3>ORAGANIZATION SITE</h3>
                     <p>Visit our project= organization website </p>
-                    <button>link-></button>
+                    <button><a href="https://samarthkhorate.github.io/Organization-site/">link-></a></button>
                 </div>
             </div>
             <div class="portfolio-card">
                 <img src="protofilo3.jpg" alt="">
                 <div class="overlay">
-                    <h3>Trekking website</h3>
-                    <p>Visit our project .</p>
-                    <button>link-></button>
+                    <h3>PORTFOLIO SITE</h3>
+                    <p>Visit our Portfolio Site.</p>
+                    <button><a href="https://samarthkhorate.github.io/portfolio-site/">link-></a></button>
                 </div>
             </div>
             <div class="portfolio-card">
