--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <nav>
-            <img src="finallogo.png" style="color: black" alt="">
+            <img src="assets/images/finallogo.png" style="color: black" alt="">
             <ul>
                 <li><a href="#" class="active">About</a></li>
                 <li><a href="#portfolio-loc">Portfolio</a></li>
@@ -49,7 +49,7 @@
         <h1>Our Services</h1>
         <div class="cards">
             <div class="skill-card">
-                <img src="python.svg" alt="">
+                <img src="assets/images/python.svg" alt="">
                 <h2>Python</h2>
             </div>
             <!-- <div class="skill-card">
@@ -57,7 +57,7 @@
                 <h2>AWS</h2> -->
             <!-- </div> -->
             <div class="skill-card">
-                <img src="css.svg" alt="">
+                <img src="assets/images/css.svg" alt="">
                 <h2>CSS</h2>
             </div>
             <!-- <div class="skill-card">
@@ -73,19 +73,19 @@
                 <h2>Flutter</h2> -->
             <!-- </div> -->
             <div class="skill-card">
-                <img src="git.svg" alt="">
+                <img src="assets/images/git.svg" alt="">
                 <h2>GIT</h2>
             </div>
             <div class="skill-card">
-                <img src="html.svg" alt="">
+                <img src="assets/images/html.svg" alt="">
                 <h2>HTML</h2>
             </div>
             <div class="skill-card">
-                <img src="js.svg" alt="">
+                <img src="assets/images/js.svg" alt="">
                 <h2>JavaScript</h2>
             </div>
             <div class="skill-card">
-                <img src="linux.jpg" alt="">
+                <img src="assets/images/linux.jpg" alt="">
                 <h2>Linux</h2>
             </div>
             <!-- <div class="skill-card">
@@ -97,11 +97,11 @@
                 <h2>MySQL</h2> -->
             <!-- </div> -->
             <div class="skill-card">
-                <img src="nodejs.svg" alt="">
+                <img src="assets/images/nodejs.svg" alt="">
                 <h2>NodeJS</h2>
             </div>
             <div class="skill-card">
-                <img src="react.svg" alt="">
+                <img src="assets/images/react.svg" alt="">
                 <h2>ReactJS</h2>
             </div>
         </div>
@@ -110,7 +110,7 @@
         <h1>Portfolio</h1>
         <div class="portfolio-cards">
             <div class="portfolio-card">
-                <img src="protofilo1.jpg" alt="">
+                <img src="assets/images/protofilo1.jpg" alt="">
                 <div class="overlay">
                     <h3>RESUME BUILDER</h3>
                     <p>Generate your official Resume with us .</p>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="protofilo2.jpg" alt="">
+                <img src="assets/images/protofilo2.jpg" alt="">
                 <div class="overlay">
                     <h3>ORAGANIZATION SITE</h3>
                     <p>Visit our project= organization website </p>
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="protofilo3.jpg" alt="">
+                <img src="assets/images/protofilo3.jpg" alt="">
                 <div class="overlay">
                     <h3>PORTFOLIO SITE</h3>
                     <p>Visit our Portfolio Site.</p>
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="protofilo4.jpg" alt="">
+                <img src="assets/images/protofilo4.jpg" alt="">
                 <div class="overlay">
                     <h3>Twitter Scrapper</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, laudantium!</p>
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="protofilo5.jpg" alt="">
+                <img src="assets/images/protofilo5.jpg" alt="">
                 <div class="overlay">
                     <h3>LinkedIn Scrapper</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, laudantium!</p>
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="portfolio-card">
-                <img src="protofilo6.jpg" alt="">
+                <img src="assets/images/protofilo6.jpg" alt="">
                 <div class="overlay">
                     <h3>YouTube Scrapper</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, laudantium!</p>
@@ -181,7 +181,8 @@
         </div>  -->
     </section>
     <section class="contact-us " id="contact-loc">
-        <h1>Contact Me</h1>
+        <center><h1 style="color: whitesmoke;">Contact Us</h1></center>
+        <hr>
         <div class="contact">
             <div class="contact-card">
                 <i class="ri-message-3-line"></i>
