--- a/index.html
+++ b/index.html
@@ -161,8 +161,10 @@
         <Button>View More</Button>
     </section>
     <section class="experience">
-        <div class="darker-div"></div>
-        <h1>  Our Speciallity </h1>
+        <div class="darker-div">
+            <center><h1>Our Speciallity</h1></center>
+        </div>
+        
         <div class="lighter-div">
             <div class="exp">
                 <h2>Web Developing</h2>
